@@ -13,8 +13,18 @@ namespace logger {
             file_sink(name,
                       pname,
                       level,
+                      syslog_facility::default_facility(),
                       stderr) {
         // intentional...
+    }
+
+    stderr_sink::stderr_sink(const std::string &name, const std::string &pname, log_level level, const log_facility_ptr &facility):
+            file_sink(name,
+                      pname,
+                      level,
+                      facility,
+                      stderr){
+
     };
 
 } // namespace logger
